# pos-tagging-with-llms

./: .gitignore  LICENSE  README.md  count_pos.py  gemini_key.ini  grok_key.ini  hw1.md  pyproject.toml  ud_pos_tagger_gemini.py  ud_pos_tagger_grok.py  ud_pos_tagger_sklearn.ipynb
